# cmake-git-versioning

./: LICENSE
src/: CMakeLists.txt  build_info.h.in  generate_build_info.cmake  main.c
